cros: Fix flaky TouchAccessibilityEnablerTest

TouchAccessibilityEnablerTest.InteractsWithTouchExplorationController
is flaky in ash_unittests because ScreenForShutdown persists between
tests. Clean up ScreenForShutdown at the end of each AshTestBase.

Bug: 844253
Test: ash_unittests
Change-Id: I4437fea28bc7757dc38d27db8bfbd173ddfba07a
Reviewed-on: https://chromium-review.googlesource.com/1065177
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560230}
Former-commit-id: 2bb564819e1c78997970af778e201a2b05563508